# The-Fat-Controller

./: Cargo.toml
examples/: ascii.rs  rotate-mouse.rs
src/: command_code.rs  enum.rs  generic_error.rs  key.rs  lib.rs  mouse_button.rs
src/command/: execute.rs  from_bytes.rs
src/linux_common/: key_code.rs
src/linux_x11/: keyboard.rs  mod.rs  mouse.rs  screen.rs
src/linux_x11/ffi/: mod.rs  xkb.rs  xkbcommon.rs  xlib.rs  xtest.rs
src/macos/: error.rs  keyboard.rs  mod.rs  mouse.rs  screen.rs
src/macos/ffi/: carbon_events.rs  carbon_textinputsources.rs  carbon_unicodeutilities.rs  cfbase.rs  cfdata.rs  io_hidlib.rs  io_kitlib.rs  io_llevent.rs
src/traits/: ascii_keyboard_context.rs  keyboard_context.rs  mouse_context.rs  screen_context.rs  unicode_keyboard_context.rs
src/utils/: mod.rs
src/windows/: error.rs  keyboard.rs  mod.rs
src/windows/ffi/: winuser.rs
tests/: simulate.rs
