[package]
name = "tfc"
description = "The Fat Controller. A library for simulating mouse and keyboard events."
keywords = ["keyboard", "mouse", "automation", "control"]
version = "0.7.0"
authors = ["Indiana Kernick <indiana.kernick@gmail.com>"]
edition = "2021"
repository = "https://github.com/indianakernick/The-Fat-Controller"
homepage = "https://github.com/indianakernick/The-Fat-Controller"
readme = "README.md"
categories = ["os::linux-apis", "os::macos-apis", "os::windows-apis"]
license = "MIT OR Apache-2.0"
exclude = [".gitignore", ".idea", "docs", "iOS_client"]

[features]
default = ["check-x11"]
check-x11 = []
x11 = []
ascii-fallback = []

[target.'cfg(target_os = "macos")'.dependencies]
# Both of these are required for UnicodeKeyboardContext::unicode_string
unicode-segmentation = "1.10"
core-graphics = "0.23"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "errhandlingapi", "processthreadsapi"] }

[dependencies]
tokio = { optional = true, version = "1", features = ["time"] }

[dev-dependencies]
lazy_static = "1.4"

[profile.release]
lto = true
